--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url("assets/Norse-Bold.otf");
 }
 
+* {
+    box-sizing: border-box;
+}
+
 html, 
 body {
     height: 100%;
@@ -13,27 +17,49 @@ body {
     margin: 0;
 }
 
-img[src="assets/logo.png"] {
-    width: 100px;
-    height: 100px;
+img[src="./assets/logo.png"] {
+    width: 95px;
+    height: 127px;
 }
 
 div.sidebar {
-    flex: 1 1 auto;    
+    aspect-ratio: 2/3;
+    background-image: url("./assets/pawel-czerwinski-6lQDFGOB1iw-unsplash.jpg");
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
+div.sidebar > p > a {
+    color: white;
+}
 
-div.logo > a > *{
-    display: inline-block;
+div.sidebar > p {
+    margin-top: auto;
+    text-align: center;
+    color: white;
+}
+
+div.logo {
+    margin-top: 33%;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div.logo > a {
-    display: inline-block;
-    width: 100%;
-    background-color: rgba(100, 100, 100, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Norse-Bold;
+    font-size: 30px;    
+    text-decoration: none;
+    color: white;
 }
 
 div.content {
-    flex: 1 1 auto;
+    width: 100%;
     background-color: #eee;
 }
