--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
     box-sizing: border-box;
 }
 
-html, 
-body {
+html, body {
     height: 100%;
 }
 
@@ -16,6 +15,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
+    background-color: #333;
 }
 
 img[src="./assets/logo.png"] {
@@ -24,15 +24,18 @@ img[src="./assets/logo.png"] {
 }
 
 div.sidebar {
-    aspect-ratio: 2/3;
+    flex: 1 1 500px;
+    max-width: 500px;
     background-image: url("./assets/pawel-czerwinski-6lQDFGOB1iw-unsplash.jpg");
     background-size: cover;
     display: flex;
     flex-direction: column;
+    box-shadow: -5px 0 5px 1px #111;
 }
 
-div.sidebar > p > a {
+a { 
     color: white;
+    text-decoration: none;
 }
 
 div.sidebar > p {
@@ -45,9 +48,6 @@ div.logo {
     margin-top: 33%;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 div.logo > a {
@@ -56,14 +56,14 @@ div.logo > a {
     align-items: center;
     font-family: Norse-Bold;
     font-size: 30px;    
-    text-decoration: none;
-    color: white;
 }
 
 div.content {
-    width: 100%;
+    flex: 1 5 auto;
+    max-width: 800px;
     background-color: #eee;
     padding-left: 40px;
+    box-shadow: 5px 0 5px 1px #111;
 }
 
 p.description {
@@ -86,7 +86,7 @@ form > div {
     padding-top: 1%;
     padding-bottom: 2%;
     background-color: white;
-    box-shadow: 0 5px 4px grey;
+    box-shadow: 0 5px 5px 1px grey;
 }
 
 form > div > p {
@@ -96,8 +96,8 @@ form > div > p {
 
 div.form-column {
     display: flex;
-    gap: 5%;
     flex-direction: column;
+    gap: 5%;
 }
 
 p {
@@ -136,5 +136,4 @@ button:hover {
 
 .log-in {
     color: #1e6a7b;
-    text-decoration: none;
 }
