--- a/style.css
+++ b/style.css
@@ -7,15 +7,23 @@
     box-sizing: border-box;
 }
 
-html, body {
+html {
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ccc;
+    --border-rad: 20px;
 }
 
 body {
+    border-radius: var(--border-rad);
+    height: 95%;
     display: flex;
     justify-content: center;
     margin: 0;
-    background-color: #333;
+    box-shadow: 10px 10px 25px 1px #111;
+
 }
 
 img[src="./assets/logo.png"] {
@@ -24,13 +32,15 @@ img[src="./assets/logo.png"] {
 }
 
 div.sidebar {
+    border-top-left-radius: var(--border-rad);
+    border-bottom-left-radius: var(--border-rad);
     flex: 1 1 500px;
     max-width: 500px;
     background-image: url("./assets/pawel-czerwinski-6lQDFGOB1iw-unsplash.jpg");
     background-size: cover;
     display: flex;
     flex-direction: column;
-    box-shadow: -5px 0 5px 1px #111;
+    /* box-shadow: -5px 0 5px 1px #111; */
 }
 
 a { 
@@ -62,11 +72,13 @@ div.logo > a {
 }
 
 div.content {
+    border-top-right-radius: var(--border-rad);
+    border-bottom-right-radius: var(--border-rad);
     flex: 1 5 auto;
     max-width: 800px;
     background-color: #eee;
     padding-left: 40px;
-    box-shadow: 5px 0 5px 1px #111;
+    /* box-shadow: 5px 0 5px 1px #111; */
 }
 
 p.description {
@@ -120,7 +132,36 @@ input + label {
 
 input {
     height: 25px;
+    border-radius: 5px;
+    border: 1px solid black;
+    outline: none;
     font-size: medium;
+    transition: all 0.25s ease-in-out;
+}
+
+input:focus {
+    border: 2px solid #1e6a7b;
+    margin: 0 -1px;
+    box-shadow: 2px 2px 6px 2px #ccc;
+    transition: all 0.25s ease-in-out;
+}
+
+input[type="password"]:invalid {
+    border: 2px solid red;
+}
+
+input[type="password"]:invalid + span {
+    position: relative;
+}
+
+input[type="password"]:invalid + span::after {
+    position: absolute;
+    top: 7px;
+    right: 0px;
+    content: "*Password must be at least 8 characters.";
+    font-size: small;
+    color: red;
+    transition: all 0.25s ease-in-out;
 }
 
 button {
