--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 }
 
 body {
-    --border-rad: 20px;
+    --border-rad: 5%;
     border-radius: var(--border-rad);
     height: 95%;
     display: flex;
@@ -42,7 +42,7 @@ div.sidebar {
     flex-direction: column;
 }
 
-a { 
+a {
     color: white;
 }
 
@@ -67,7 +67,7 @@ div.logo > a {
     justify-content: center;
     align-items: center;
     font-family: Norse-Bold;
-    font-size: 30px;    
+    font-size: 30px;
     text-decoration: none;
 }
 
@@ -82,10 +82,11 @@ div.content {
 
 p.description {
     font-weight: 550;
+    padding-right: 5%;
 }
 
 p.description:first-child {
-    margin-top: 100px;
+    margin-top: 10%;
 }
 
 div.signup-info {
@@ -111,12 +112,11 @@ form > div > p {
 div.form-column {
     display: flex;
     flex-direction: column;
-    gap: 5%;
 }
 
 p {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
 }
 
 label {
@@ -126,7 +126,7 @@ label {
 }
 
 input + label {
-    margin-top: 20px;
+    margin-top: 5%;
 }
 
 input {
@@ -161,9 +161,10 @@ input[type="password"]:invalid + span {
 input[type="password"]:invalid + span::after {
     position: absolute;
     top: 7px;
-    right: 0px;
+    right: -10%;
     content: "*Password must be at least 8 characters.";
     font-size: small;
+    width: 110%;
     color: red;
     transition: all 0.25s ease-in-out;
 }
@@ -183,5 +184,7 @@ button:hover {
 }
 
 .log-in {
+    margin-top: 100%;
+    text-decoration: none;
     color: #1e6a7b;
 }
