--- a/style.css
+++ b/style.css
@@ -18,12 +18,11 @@ html {
 body {
     --border-rad: 5%;
     border-radius: var(--border-rad);
-    height: 95%;
+    height: 96%;
     display: flex;
     justify-content: center;
     margin: 0;
     box-shadow: 10px 10px 25px 1px #111;
-
 }
 
 img[src="./assets/logo.png"] {
@@ -78,15 +77,15 @@ div.content {
     max-width: 800px;
     background-color: #eee;
     padding-left: 40px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 p.description {
     font-weight: 550;
     padding-right: 5%;
-}
-
-p.description:first-child {
-    margin-top: 10%;
 }
 
 div.signup-info {
@@ -184,7 +183,7 @@ button:hover {
 }
 
 .log-in {
-    margin-top: 100%;
+    /* margin-top: 80%; */
     text-decoration: none;
     color: #1e6a7b;
 }
